# gdut-robocon11-host-computer-project

./: .gitignore  CMakeLists.txt  block_face_pipeline.hpp  block_face_pipeline.py  geometry_utils.hpp  main.cpp  main_pole.cpp  main_weapon.cpp  yolo_model_classifier.hpp  yolo_model_detector.hpp  yolo_model_interface.hpp  yolo_model_obb.hpp  yolo_model_pose.hpp  yolo_model_segmentor.hpp
include/: yolo_model_interface.hpp  yolo_model_weapon.hpp
model/: block_cls.pt
